fix avatar visibility issue

--- a/babaei.net/static/css/custom.css
+++ b/babaei.net/static/css/custom.css
@@ -4,6 +4,17 @@
     margin-top: 75px;
 }
 
+.navbar-custom .avatar-container {
+    -webkit-transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;;
+    visibility: visible;
+}
+
+.navbar-custom.top-nav-short .avatar-container{
+    visibility: hidden;
+}
+
 .intro-header {
     margin-top: 275px;
 }
